--- a/homework-week-4-game/index.html
+++ b/homework-week-4-game/index.html
@@ -21,8 +21,8 @@
 			<h1><strong>Crystals Collector!</strong></h1>
 		</div>
 		
-		<div class="row">
-			<div class="col-md-12-12"></div>
+		<div class="row_1">
+			<div class="col-md-12">
 			<section id="instructions">
 			<p>You will be given a random number at the start of the game.</p>
 			<br>
@@ -34,14 +34,14 @@
 			<br>
 			<p>Each time when the game starts, the game will change the values of each crystal.</p>
 			</section>
+			</div>
 		</div>
 
 		<div class="row">
-			<div id="answer">
+			<div class="col-md-6" id="answer">
 				<p>0</p>
 			</div>
-
-			<div id="wins_losses">
+			<div class="col-md-6" id="wins_losses">
 				<p>Wins: 0</p>
 				<br>
 				<p>Losses: 0</p>
@@ -49,22 +49,22 @@
 		</div>
 
 		<div class="row">
-			<div class="rock" id="rock_1">
+			<div class="rock col-md-3" id="rock_1">
 				<!-- <a href="#" src="rock_1.jpg"> -->
 				<img src="assets/images/rock_1.png">
 				<!-- <p>0</p> -->
 			</div>
-			<div class="rock" id="rock_2">
+			<div class="rock col-md-3" id="rock_2">
 				<!-- <a href="#" src="rock_1.jpg"> -->
 				<img src="assets/images/rock_2.png">
 				<!-- <p>0</p> -->
 			</div>
-			<div class="rock" id="rock_3">
+			<div class="rock col-md-3" id="rock_3">
 				<!-- <a href="#" src="rock_1.jpg"> -->
 				<img src="assets/images/rock_3.png">
 				<!-- <p>0</p> -->
 			</div>
-			<div class="rock" id="rock_4">
+			<div class="rock col-md-3" id="rock_4">
 				<!-- <a href="#" src="rock_1.jpg"> -->
 				<img src="assets/images/rock_4.png">
 				<!-- <p>0</p> -->
