--- a/homework-week-4-game/index.html
+++ b/homework-week-4-game/index.html
@@ -21,7 +21,7 @@
 			<h1><strong>Crystals Collector!</strong></h1>
 		</div>
 		
-		<div class="row_1">
+		<div class="row">
 			<div class="col-md-12">
 			<section id="instructions">
 			<p>You will be given a random number at the start of the game.</p>
